# variant-adapter

./: CMakeLists.txt  variant
.metaconfigure/: description.json
metaconfigure/: description.json
src/: variant
test/: CMakeLists.txt  variant.test.cpp
